2025-06-22T12:40:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15806679157 # 1054
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
* notice: last 14d: unq all: 51 105
* notice: prev accum: outdated-unq outdated-all / unq all: 4271 9007 / 4351 9114
* notice: next accum: outdated-unq outdated-all / unq all: 4271 9007 / 4353 9116
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -3 -4 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-06-08 2025-06-22]

2025-06-22T01:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15801790634 # 1053
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-22
* notice: last 14d: unq all: 52 107
* notice: prev accum: outdated-unq outdated-all / unq all: 4266 9000 / 4348 9110
* notice: next accum: outdated-unq outdated-all / unq all: 4271 9007 / 4351 9114
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2025-06-07] / [2025-06-21]

2025-06-21T12:40:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15795797424 # 1052
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-21
* notice: last 14d: unq all: 52 107
* notice: prev accum: outdated-unq outdated-all / unq all: 4266 9000 / 4347 9109
* notice: next accum: outdated-unq outdated-all / unq all: 4266 9000 / 4348 9110
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -3 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-07 2025-06-21]

2025-06-21T01:47:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15790823242 # 1051