@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-22T12:40:04Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-06-23T01:56:55Z",
+  "count" : 4,
+  "count_minmax" : [ 2, 4 ],
+  "count_decinc" : [ -0, +4 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
