@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-22T12:40:04Z",
-  "count_outdated" : 9007,
-  "uniques_outdated" : 4271,
-  "count" : 9116,
-  "uniques" : 4353,
+  "timestamp" : "2025-06-23T01:56:55Z",
+  "count_outdated" : 9017,
+  "uniques_outdated" : 4278,
+  "count" : 9118,
+  "uniques" : 4354,
   "clones" : [
-    {
-      "timestamp": "2025-06-08T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 10 ],
-      "count_decinc": [ 4, 10 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 7 ],
-      "uniques_decinc": [ 3, 7 ]
-    },
     {
       "timestamp": "2025-06-09T00:00:00Z",
       "count": 9,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-06-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 4,
+      "count_minmax": [ 2, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
