@@ -1,12 +1,7 @@
 {
-  "count": 105,
-  "uniques": 51,
+  "count": 101,
+  "uniques": 50,
   "clones": [
-    {
-      "timestamp": "2025-06-08T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2025-06-09T00:00:00Z",
       "count": 9,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2025-06-22T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
